Solved issue of blue pulse when interacting with elements on mobile browser

--- a/src/index.css
+++ b/src/index.css
@@ -101,6 +101,10 @@ body {
     /* overflow-y: scroll; */
 }
 
+body * {
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
 /* body::-webkit-scrollbar {
     width: 10px;
 }
